--- a/props/emp-xapi-env.properties
+++ b/props/emp-xapi-env.properties
@@ -15,22 +15,22 @@
 #
 # -------------------------------------------------------------------------------------
 # Base Application Name
-brp.comments.xapi
+emp.xapi
 
 # HTTP Listener 
 bpr.comments.sapi.httplistener.host = 127.0.0.1
 bpr.comments.sapi.httplistener.basepath = /api/bpr-comments-sapi/v1/
 
 # Client ID Enforcement
-bpr.comments.sapi.client.id = c80c95b8c68746b381528ac31afec168
+emp.xapi.client.id = c80c95b8c68746b381528ac31afec168
 
 # HTTP Request 1
-bpr.actionplan.papi.httpsrequest.host = accapidev.corp.fin
-bpr.actionplan.papi.httpsrequest.basepath = /api/bpr-actionplan-papi/v1/
+emp.sapi.httpsrequest.host = accapidev.corp.fin
+emp.sapi.httpsrequest.basepath = /api/emp-sapi/v1/
 
 # HTTP Request 2
-bpr.document.papi.httpsrequest.host = accapidev.corp.fin
-bpr.document.papi.httpsrequest.basepath =/api/bpr-document-papi/v1/
+#emp.papi.httpsrequest.host = accapidev.corp.fin
+#emp.papi.httpsrequest.basepath =/api/emp-papi/v1/
 
 # Database Connect 1
 branchinfomation.sqlserver.server = EVDEVSQL01
@@ -52,3 +52,4 @@ bpr.comments.sapi.mq.cipherspec=TLS_RSA_WITH_AES_256_CBC_SHA256
 # MQ Queues
 bpr.comments.accounts.mq.receiver.queue= BENDRSP
 bpr.comments.accounts.mq.sender.queue= ZENDRCV
+
